.local-manifest/ns-apps/auth-soft-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nsapp-auth-soft

spec:
  headers:
    customRequestHeaders:
      X-Forward-Auth-Type: soft
